@@ -1,0 +1,3 @@
+\font\test="[test.ttc:0]"\test This is a test
+\font\test="[test.ttc:1]"\test This is a test
+\bye
